Implement an Array Data Structure

--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,3 @@
 <h1>Javascript With Data Structure & Algorithm</h1>
-<a href="array_compare.html">compare two array</a>
+<a href="array_compare.html">compare two array</a><br>
+<a href="implementarray.html">Implement an Array</a><br>
